k8s/flask-deployment.yaml
# flask-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
  labels:
    env: dev
    owner: RishatMukhtarov
spec:
  #  replicas: 2
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
      - name: flask
#        image: docker.io/library/notebook-app-web:latest
        image: ritchie229/ritchie_docker:notebook-app-web
        ports:
          - containerPort: 5000
      nodeSelector:
        type: worker
